# ChangeLog for games-board/jrisk
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/jrisk/Attic/ChangeLog,v 1.16 2007/06/03 16:54:39 mr_bones_ Exp $

  03 Jun 2007; Michael Sterrett <mr_bones_@gentoo.org>
  jrisk-1.0.8.9-r1.ebuild:
  need to call java-pkg-2_src_compile to build the files

  25 Mar 2007; Petteri Räty <betelgeuse@gentoo.org>
  jrisk-1.0.8.9-r1.ebuild:
  Fix the ebuild so that it can be installed without it already installed.

*jrisk-1.0.8.9-r1 (14 Feb 2007)

  14 Feb 2007; Petteri Räty <betelgeuse@gentoo.org>
  +jrisk-1.0.8.9-r1.ebuild:
  Use java eclasses.

  03 Feb 2007; Simon Stelling <blubb@gentoo.org> jrisk-1.0.8.8.ebuild:
  stable on amd64

*jrisk-1.0.8.9 (19 Jan 2007)

  19 Jan 2007; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.9.ebuild:
  version bump

*jrisk-1.0.8.8 (02 Oct 2006)

  02 Oct 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.8.ebuild:
  version bump (bug #149845)

  23 Aug 2006; Michael Sterrett <mr_bones_@gentoo.org> jrisk-1.0.8.7.ebuild:
  stable for x86

  23 Jul 2006; Diego Pettenò <flameeyes@gentoo.org> jrisk-1.0.8.7.ebuild:
  Add ~x86-fbsd keyword.

*jrisk-1.0.8.7 (02 May 2006)

  02 May 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.7.ebuild:
  version bump

*jrisk-1.0.8.6 (31 Jan 2006)

  31 Jan 2006; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.6.ebuild:
  version bump

*jrisk-1.0.8.5 (24 Dec 2005)

  24 Dec 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.5.ebuild:
  version bump

*jrisk-1.0.8.4 (01 Dec 2005)

  01 Dec 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.4.ebuild:
  version bump

*jrisk-1.0.8.3 (31 Oct 2005)

  31 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.3.ebuild:
  version bump

*jrisk-1.0.8.2 (18 Oct 2005)

  18 Oct 2005; Michael Sterrett <mr_bones_@gentoo.org>
  +jrisk-1.0.8.2.ebuild:
  version bump
