@@ -1,0 +1,3 @@
+MD5 d7713d5b510a26897a6567e0b1f8c07e backup_of_Risk_1.0.9.0.zip 10498932
+RMD160 67cc8e692c077625b077c9e0c89d69fffee317b1 backup_of_Risk_1.0.9.0.zip 10498932
+SHA256 6499e9e8e3b8dad8c3e8588f5a492587fc9095249f2a10045f6a3773dbbe6d3a backup_of_Risk_1.0.9.0.zip 10498932
