@@ -1,6 +1,12 @@
 # ChangeLog for games-board/jrisk
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/jrisk/Attic/ChangeLog,v 1.16 2007/06/03 16:54:39 mr_bones_ Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/jrisk/Attic/ChangeLog,v 1.17 2007/07/07 02:43:50 mr_bones_ Exp $
+
+*jrisk-1.0.9.0 (07 Jul 2007)
+
+  07 Jul 2007; Michael Sterrett <mr_bones_@gentoo.org>
+  +jrisk-1.0.9.0.ebuild:
+  version bump
 
   03 Jun 2007; Michael Sterrett <mr_bones_@gentoo.org>
   jrisk-1.0.8.9-r1.ebuild:
